# mediwave-leave-policies-lang-rag

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: server.py
